# qmlevemon

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  img.qrc  main.cpp  notificationsystem.cpp  notificationsystem.h  periodical_refresher.cpp  periodical_refresher.h  qml.qrc  qmlevemon.kdev4  qmlevemon.pro  qmlevemon_app.cpp  qmlevemon_app.h  ru.minlexx.qmlevemon.json  settings.cpp  settings.h  sql.qrc
android/: README.txt  qmlevemon_android.pro
android/aarch64-linux-android-4.9/: libcrypto.pc  libssl.pc
android/service/: android_service.cpp  android_service.h
android/src/: AndroidManifest.xml
android/src/src/ru/minlexx/qmlevemon/: QMLEVEMonActivity.java  (+1 more)
cmake/: example_run_cmake.bat
cmake/toolchain/: specifydependencies.cmake
db/: db.cpp  db.h  db_sqlite.cpp  db_sqlite.h  portrait_cache.cpp  portrait_cache.h  type_icons_provider.cpp  type_icons_provider.h
eve_api/: eve_api.cpp  eve_api.h  eve_api_tokens.cpp  eve_api_tokens.h  eve_sso.cpp  eve_sso.h
img/app_icon/: all_sizes.xcf
linux/: ru.minlexx.qmlevemon.appdata.xml  ru.minlexx.qmlevemon.desktop
models/: character.cpp  character.h  character_clone.cpp  character_clone.h  character_clones_model.cpp  character_clones_model.h  character_implants_group.cpp  character_implants_group.h  character_model.cpp  character_model.h  character_skill.cpp  character_skill.h  character_skillgroups_model.cpp  character_skillgroups_model.h  character_skillqueue.cpp  character_skillqueue.h  character_skillqueue_info.cpp  character_skillqueue_info.h  character_skillqueue_model.cpp  character_skillqueue_model.h  eve_location.cpp  eve_location.h  formulas.cpp  formulas.h  invtype.cpp  invtype.h  mail_models.cpp  mail_models.h  model_manager.cpp  model_manager.h  notification.cpp  notification.h  skill.cpp  skill.h  skill_group.cpp  skill_group.h  skill_template.cpp  skill_template.h  skill_tree_model.cpp  skill_tree_model.h  (+2 more)
network/: periodical_refresher.cpp  periodical_refresher.h
network/refresher/: clones.cpp  location.cpp  mail.cpp  notifications.cpp  periodical_refresher_worker.cpp  periodical_refresher_worker.h  public_data.cpp  resolvers.cpp  server_status.cpp  skills.cpp  wallet.cpp
qml/: AppStyle.qml  AppStyle.qmlc  main.qml  main.qmlc  utils.js
qml/custom_controls/: BlinkingRectangle.qml  CharacterAttributeLine.qml  CharacterAttributesView.qml  CharacterPickerSidebar.qml  EMPopupMenuItem.qml  HamburgerIcon.qml  HamburgerIcon.qmlc  HamburgerMenuBackIcon.qmlc  HeaderToolbar.qml  InlineMessage.qml  MailLabelRect.qml  SkillLevelIndicatorRect.qml  SkillProgressBar.qml  TextKeyValue.qml  TextKeyValue.qmlc
qml/pages/: Home.qml  MailView.qml  PageAbout.qmlc  PageAddCharacter.qml  PageAddCharacter.qmlc  PageCharacterMain.qml  PageCharacterMain.qmlc  PageHome.qml  PageHome.qmlc  Settings.qml  TestPage.qml
qml/pages/char/: CharMain.qml  CharTabAssets.qml  CharTabClones.qml  CharTabMail.qml  CharTabSkills.qml  CharTabSkillsQueue.qml  CharTabWallet.qml
qtwebserver/: weblayout.cpp
qtwebserver/css/: cssruleset.cpp  cssruleset.h
qtwebserver/http/: httprequest.cpp  httpresource.cpp  httpresponse.cpp  httpwebengine.cpp
qtwebserver/misc/: log.cpp
qtwebserver/sql/: sqlconnectionpool.cpp
qtwebserver/tcp/: tcpmultithreadedserver.cpp  tcpmultithreadedserver.h  tcpserverthread.cpp  tcpserverthread.h
qtwebserver/util/: utildataurlcodec.cpp  utilformurlcodec.cpp
sql/: chrAncestries.sql  chrBloodlines.sql  chrFactions.sql  chrRaces.sql  create_sql_dumps.py  dgmAttributeTypes.sql  invCategories.sql  invGroups.sql  invTypes.sql
src/: img.qrc  main.cpp  notificationsystem.cpp  notificationsystem.h  qml.qrc  qmlevemon_app.cpp  qmlevemon_app.h  settings.cpp  settings.h
src/db/: corp_icons_provider.cpp  corp_icons_provider.h  db.h  db_sqlite.cpp  db_sqlite.h  portrait_cache.cpp  portrait_cache.h  type_icons_provider.cpp  type_icons_provider.h
src/eve_api/: eve_api.cpp  eve_api.h  eve_api_tokens.h  eve_sso.cpp
src/models/: character.cpp  character.h  character_assets_models.cpp  character_assets_models.h  character_clone.h  character_clones_model.cpp  character_clones_model.h  character_implants_group.h  character_mail_models.cpp  character_mail_models.h  character_model.cpp  character_model.h  character_notifications.cpp  character_notifications.h  character_skill.cpp  character_skillqueue.cpp  character_wallet_models.cpp  character_wallet_models.h  common_model_base.h  eve_location.cpp  eve_location.h  formulas.cpp  formulas.h  invtype.h  mail_models.cpp  notification.cpp  notification.h  skill_template.cpp  skill_tree_model.cpp  wallet_models.cpp  wallet_models.h
src/network/: periodical_refresher.cpp  periodical_refresher.h
src/network/refresher/: assets.cpp  clones.cpp  location.cpp  mail.cpp  notifications.cpp  periodical_refresher_worker.cpp  periodical_refresher_worker.h  resolvers.cpp  skills.cpp  wallet.cpp  wallet_history.cpp
src/qml/: AppStyle.qml  main.qml  qmldir
src/qml/custom_controls/: HamburgerMenuBackIcon.qml  InlineMessage.qml  MailLabelRect.qml  SkillLevelIndicatorRect.qml
src/qml/pages/: About.qml  AddCharacter.qml  Home.qml  TestPage.qml
src/qml/pages/char/: CharMain.qml  CharTabAssets.qml  CharTabClones.qml  CharTabMail.qml  CharTabSkills.qml  CharTabSkillsQueue.qml  CharTabWallet.qml
src/qtwebserver/: CMakeLists.txt
src/qtwebserver/css/: cssdocument.cpp  cssruleset.cpp
src/qtwebserver/html/: htmldocument.cpp  htmldocument.h
src/qtwebserver/http/: httpheaders.cpp  httpiodeviceresource.cpp  httprequest.cpp  httpresource.cpp  httpstatuscodes.cpp
src/qtwebserver/misc/: log.cpp
src/qtwebserver/util/: utilassetsresource.cpp  utildataurlcodec.h
src/sql/: chrRaces.sql  create_sql_dumps.py  dgmAttributeTypes.sql  invCategories.sql  invGroups.sql  invTypes.sql
src/tests/: CMakeLists.txt  hello.txt  test_character_datastream.cpp
src/utils/: str_utils.cpp
tests/: CMakeLists.txt  test_character_skillqueue_info.cpp  test_eveapi.cpp  test_qtwebserver.cpp
utils/: str_utils.h
win32/: make_windows_installer.bat  qmlevemon_installer.nsi  win32_version.h  windows_resources.rc
(+1 files in other folders)
